# chatgpt_demo

./: .gitignore  README.md  requirements.txt
ChatGPTDemoiOS/: BUILD  Info.plist  MODULE.bazel  Package.resolved  Package.swift  README.md  swift_deps_index.json
ChatGPTDemoiOS/ChatGPTDemo/ChatGPTDemo/: ChatGPTDemoApp.swift  ChatThreadListView.swift  ContentView.swift  Persistence.swift
ChatGPTDemoiOS/ChatGPTDemo/ChatGPTDemo.xcodeproj/: project.pbxproj
ChatGPTDemoiOS/ChatGPTDemo/ChatGPTDemo.xcodeproj/project.xcworkspace/xcuserdata/cs2be.xcuserdatad/: UserInterfaceState.xcuserstate
ChatGPTDemoiOS/ChatGPTDemo/ChatGPTDemo/ChatGPTDemo.xcdatamodeld/: .xccurrentversion
ChatGPTDemoiOS/ChatGPTDemo/ChatGPTDemo/ChatGPTDemo.xcdatamodeld/ChatGPTDemo.xcdatamodel/: contents
ChatGPTDemoiOS/ChatGPTDemoPlayground.playground/: Contents.swift
ChatGPTDemoiOS/ChatGPTDemoPlayground.playground/Resources/: test.html
ChatGPTDemoiOS/ChatGPTDemoiOS/: BUILD
ChatGPTDemoiOS/Resources/: BUILD  listings.plist
ChatGPTDemoiOS/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ChatGPTDemoiOS/Resources/CoreDataModel.xcdatamodeld/CoreDataModel.xcdatamodel/: contents
ChatGPTDemoiOS/Sources/: ChatGPTDemoApp.swift
ChatGPTDemoiOS/Sources/DataManager/: ChatGPTDataManager.swift  ChatGPTHTTPClient.swift  ChatThreadDataManager.swift  LMStudioHTTPClient.swift  ListingDataManager.swift  OllamaHTTPClient.swift  PersistantStore.swift
ChatGPTDemoiOS/Sources/Extensions/: ContainerExtension.swift  LoggerExtension.swift  URLCache+imageCache.swift
ChatGPTDemoiOS/Sources/Helpers/: ChatGPTResponseHelper.swift  LMStudioResponseHelper.swift  MockDataHelper.swift  OllamaResponseHelper.swift  PreviewHelper.swift
ChatGPTDemoiOS/Sources/Models/: ChatMessageModel.swift  ChatThreadModel.swift  Contact.swift  ListingModel.swift
ChatGPTDemoiOS/Sources/ViewModels/: ChatThreadChatGPTActions.swift  ChatThreadLMStudioActions.swift  ChatThreadOllamaActions.swift  ChatThreadViewModel.swift  ChatThreadViewModelActions.swift  ChatThreadViewModelActionsDelegate.swift  ChatThreadViewModelActionsProviding.swift  ListingViewModel.swift
ChatGPTDemoiOS/Sources/ViewModifiers/: ListingViewModifier.swift  ProfilePictureViewModifier.swift  RoundedCornersViewModifier.swift  SearchButtonViewModifier.swift
ChatGPTDemoiOS/Sources/Views/: GrowingTextField.swift  ListRowView.swift  ListingDetailView.swift  ListingListView.swift  ListingView.swift  LoadingCirclesView.swift  MessageCellView.swift  OptionsView.swift  PorfilePictureView.swift  ProfilePictureView.swift  ThreadList.swift  ThreadView.swift  ThreadViewBanner.swift
chatgpt_demo/: db.sqlite3  manage.py  requirements.txt
(+10 files in other folders)
