###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "chatgpt_demo", version = "1.0")

bazel_dep(name = "rules_apple", version = "3.2.1")
bazel_dep(name = "rules_swift", version = "1.15.1")
bazel_dep(name = "apple_support", version = "1.11.1")
bazel_dep(name = "rules_xcodeproj", version = "1.15.0")
bazel_dep(name = "bazel_features", version = "1.3.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_swift_package_manager", version = "0.26.2")# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//:swift_deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_alamofire",
    "swiftpkg_swiftui_cached_async_image",
    "swiftpkg_swinject",
)
# swift_deps END
