###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "chatgpt_demo", version = "1.0")

bazel_dep(name = "rules_apple", version = "3.8.0")
bazel_dep(name = "apple_support", version = "1.16.0")
bazel_dep(name = "rules_swift", version = "2.1.1")